# stripscrapper

./: .gitignore  README.md  formules_homogeneitzacio.md  pyproject.toml
src/stripscraper/: __init__.py  classifier.py  formula.py  main.py  models.py  parser.py  scraper.py  strip.py
src/stripscraper/exporters/: csv.py  excel.py  pdf.py
src/stripscraper/parser/: __init__.py  html.py  httpx.py  playwright.py
src/stripscraper/scraper/: __init__.py  files.py  playwright.html.py  urls.py
